--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^6.12.4",
+    "axios": "^1.8.2",
     "babel-core": "^6.26.3",
     "babel-loader": "^10.0.0",
+    "cloudinary": "^2.6.0",
     "inngest": "^3.32.3",
     "mongoose": "^8.12.1",
     "next": "^15.2.1",
